# balba

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: qa.yaml  release.yaml
src/: __init__.py
src/balba/: __init__.py  balba.py  builder.py  cli.py  driver.py  explorer.py  models.py
src/balba/templates/: balba.css  board.html  index.html  layout.html
tests/: test_balba.py  test_builder.py  test_explorer.py
tests/resources/: usbled.kicad_sch
