[project]
name = "balba"
authors = [{name = "Antonio", email = "antonio@zoftko.com"}]
requires-python = ">=3.9.0"
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}
urls = {source = "https://gitlab.com/zoftko/balba"}
scripts = {"balba" = "balba.cli:balba"}
dependencies = [
    "click>=8.1"
]

[project.optional-dependencies]
test = [
    "tox>=4.8"
]

[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[tool.pylint]
enable = ["useless-suppression"]
disable = ["import-error", "fixme"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["balba"]

[tool.coverage.report]
show_missing = true
