[project]
name = "balba"
authors = [{name = "Antonio", email = "antonio@zoftko.com"}]
requires-python = ">=3.9.0"
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}
urls = {Source = "https://gitlab.com/zoftko/balba"}
scripts = {"balba" = "balba.cli:balba"}
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "PyYAML>=6.0",
    "Markdown>=3.4",
    "lxml>=4.9"
]

[project.optional-dependencies]
test = [
    "tox>=4.8",
]
dev = [
    "bump-my-version>=0.9"
]

[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.pylint]
enable = ["useless-suppression"]
disable = ["import-error", "fixme"]
max-line-length = 119

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["balba"]

[tool.coverage.report]
show_missing = true

[tool.bumpversion]
current_version = "0.3.1"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Version updated from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "src/balba/__init__.py"
