[project]
name = "balba"
authors = [{name = "Antonio", email = "antonio@zoftko.com"}]
requires-python = ">=3.9.0"
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}
urls = {Source = "https://gitlab.com/zoftko/balba"}
scripts = {"balba" = "balba.cli:balba"}
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "PyYAML>=6.0",
    "Markdown>=3.4",
    "lxml>=4.9"
]

[project.optional-dependencies]
test = [
    "tox>=4.8",
]
dev = [
    "commitizen>=3.10"
]

[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.pylint]
enable = ["useless-suppression"]
disable = ["import-error", "fixme"]
max-line-length = 119

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["balba"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "commitizen"
update_changelog_on_bump = true
version_files = ["src/balba/__init__.py"]
